OY-2817 : Switched to okHttp3, tests added